objects/CQS_Progetto__c.object
<CustomObject>
    <description>This object is a CQS&apos;s Object. It is used to store Projects information. Events and Inspections are related with it. Furthermore it could be used to check new Events/Inspections insert</description>
    <fields>
        <fullName>CQS_Pro_Area__c</fullName>
        <label>Area/Lotto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQS_Pro_Comune__c</fullName>
        <label>Comune</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQS_Pro_Impresa_Affidataria__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Impresa Affidataria</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>OF_CQS_Anagrafica__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Imprese in raggruppamento, Impresa</value>
            </filterItems>
            <filterItems>
                <field>OF_CQS_Anagrafica__c.CQS_Check_Affidataria__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>OF_CQS_Anagrafica__c</referenceTo>
        <relationshipLabel>Progetti</relationshipLabel>
        <relationshipName>Progetti</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CQS_Pro_LDO_Service2__c</fullName>
        <label>LDO Service 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQS_Pro_LDO_Service3__c</fullName>
        <label>LDO Service 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQS_Pro_LDO_Service__c</fullName>
        <label>LDO Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQS_Pro_LDO__c</fullName>
        <inlineHelpText>Lettera d&apos;Ordine</inlineHelpText>
        <label>LDO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQS_Prog_Importo_Aggiudicato__c</fullName>
        <label>Importo Aggiudicato</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQS_Prog_Mandante_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mandante 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>OF_CQS_Anagrafica__c.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Impresa Esecutrice, Imprese esecutrici in raggruppamento</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>OF_CQS_Anagrafica__c</referenceTo>
        <relationshipLabel>Progetti (Mandante 1)</relationshipLabel>
        <relationshipName>Progetti_Mandante_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CQS_Prog_Mandante_4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mandante 4</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>OF_CQS_Anagrafica__c.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Impresa Esecutrice, Imprese esecutrici in raggruppamento</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>OF_CQS_Anagrafica__c</referenceTo>
        <relationshipLabel>Progetti (Mandante 4)</relationshipLabel>
        <relationshipName>Progetti2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CQS_Prog_Mandataria__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Questo campo viene popolato quando l&apos;affidataria  è una RTI /ATI, e serve ad indicare l&apos;affidataria capofila</description>
        <label>Capofila</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>OF_CQS_Anagrafica__c.CQS_Check_Affidataria__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>OF_CQS_Anagrafica__c</referenceTo>
        <relationshipLabel>Progetti (Mandataria)</relationshipLabel>
        <relationshipName>Progetti_Ati</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CQS_pro_Mandante_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mandante 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>OF_CQS_Anagrafica__c.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Impresa Esecutrice, Imprese esecutrici in raggruppamento</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>OF_CQS_Anagrafica__c</referenceTo>
        <relationshipLabel>Progetti (Mandante 2)</relationshipLabel>
        <relationshipName>Progetti_Mandante2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CQS_prog_Mandante_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mandante 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>OF_CQS_Anagrafica__c.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Impresa Esecutrice, Imprese esecutrici in raggruppamento</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>OF_CQS_Anagrafica__c</referenceTo>
        <relationshipLabel>Progetti (Mandante 3)</relationshipLabel>
        <relationshipName>Progetti1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Contratto__c</fullName>
        <label>Data Contratto</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Progetto</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CQS_Pro_LDO__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Progetto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Progetti</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>